--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,24 @@ services:
     image: eclipse-mosquitto:latest
     ports:
       - "1883:1883"
-    networks:
-      - simulation-tier
+    # networks:
+    #   - simulation-tier
 
 #  elevator1:
 #    image: docker-hub.informatik.haw-hamburg.de/wp-cps/elevator
 #    environment:
 #      - capacity=20
-#      - 
+#      -
 #      - mqtt_host=mqtt
 #    depends_on:
 #      - mqtt
+
+  camera:
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/camera:latest
+    environment:
+      - camera_floor=10
+    depends_on:
+      - mqtt
 
 networks:
   simulation-tier:
