Setup docker-compose to build image directly and use static ips

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,53 @@
 version: '3'
+
+networks:
+  cps_sim:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.21.0.0/24
+
 services:
   mqtt:
     image: eclipse-mosquitto:latest
     ports:
       - "1883:1883"
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.2
 
   controller:
+    build: ./elevatorcontroller
     image: docker-hub.informatik.haw-hamburg.de/wp-cps/elevatorcontroller
     depends_on:
       - mqtt
     environment:
       - mqtt_host=mqtt
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.3
 
   input_feeder:
+    build: ./input-feeder
     image: docker-hub.informatik.haw-hamburg.de/wp-cps/input-feeder
     depends_on:
       - mqtt
     environment:
       - mqtt_host=mqtt
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.4
 
   elevator1:
+    build: ./elevator
     image: docker-hub.informatik.haw-hamburg.de/wp-cps/elevator
     environment:
       - capacity=20
       - mqtt_host=mqtt
     depends_on:
       - mqtt
+      - controller
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.5
 
