--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   controller:
     build: ./elevatorcontroller
-    image: docker-hub.informatik.haw-hamburg.de/wp-cps/elevatorcontroller
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/controller
     depends_on:
       - mqtt
     environment:
@@ -29,7 +29,7 @@ services:
 
   input_feeder:
     build: ./input-feeder
-    image: docker-hub.informatik.haw-hamburg.de/wp-cps/input-feeder
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/input-feeder
     depends_on:
       - mqtt
     environment:
@@ -39,15 +39,87 @@ services:
         ipv4_address: 172.21.0.4
 
   elevator1:
+    container_name: elevator1
     build: ./elevator
-    image: docker-hub.informatik.haw-hamburg.de/wp-cps/elevator
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/elevator
     environment:
       - capacity=20
       - mqtt_host=mqtt
+      - elevator_id=1
     depends_on:
       - mqtt
       - controller
     networks:
       cps_sim:
         ipv4_address: 172.21.0.5
+
+  floor0:
+    container_name: floor0
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+    depends_on:
+      - mqtt
+      - controller
+      - input_feeder
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.6
+
+  floor1:
+    container_name: floor1
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+    depends_on:
+      - mqtt
+      - controller
+      - input_feeder
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.7
+
+  floor2:
+    container_name: floor2
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+    depends_on:
+      - mqtt
+      - controller
+      - input_feeder
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.8
+
+  floor3:
+    container_name: floor3
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+    depends_on:
+      - mqtt
+      - controller
+      - input_feeder
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.9
+
+  floor4:
+    container_name: floor4
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+    depends_on:
+      - mqtt
+      - controller
+      - input_feeder
+    networks:
+      cps_sim:
+        ipv4_address: 172.21.0.10
 
