--- a/elevatorcontroller/Dockerfile
+++ b/elevatorcontroller/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:alpine
 
-# Add projekt source
-WORKDIR /usr/src/elevator_controller
-COPY . ./
+WORKDIR /app
 
 # Install dependencies
+COPY ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Add projekt source
+COPY ./ ./
 
 ENTRYPOINT ["python", "elevator_controller.py", "-log", "info"]
