--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "1883:1883"
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.2
+        #        ipv4_address: 172.21.0.2
 
   controller:
     build: ./elevatorcontroller
@@ -25,8 +25,48 @@ services:
       - mqtt_host=mqtt
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.3
+        #ipv4_address: 172.21.0.3
 
+  telegraf:
+    image: telegraf:latest
+    volumes:
+      - ./gui/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    depends_on:
+      - influxdb
+    networks:
+      cps_sim:
+
+  influxdb:
+    image: influxdb:latest
+    ports:
+      - "8083:8083"
+      - "8086:8086"
+      - "8090:8090"
+    environment:
+      - INFLUXDB_DATA_ENGINE=tsm1
+      - INFLUXDB_REPORTING_DISABLED=false
+    depends_on:
+      - mqtt
+    volumes:
+    # Data persistency
+    - ./gui/influxdb/data:/var/lib/influxdb
+    networks:
+      cps_sim:
+
+  grafana:
+    image: grafana/grafana:latest
+    user: "0"
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_INSTALL_PLUGINS=grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
+    depends_on:
+      - influxdb
+    volumes:
+    # Data persistency
+      - ./gui/grafana/data:/var/lib/grafana
+    networks:
+      cps_sim:
   elevator1:
     container_name: elevator1
     build: ./elevator
@@ -40,7 +80,6 @@ services:
       - controller
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.4
 
   floor0:
     container_name: floor0
@@ -51,10 +90,8 @@ services:
     depends_on:
       - mqtt
       - controller
-      - input_feeder
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.5
 
   floor1:
     container_name: floor1
@@ -65,10 +102,8 @@ services:
     depends_on:
       - mqtt
       - controller
-      - input_feeder
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.6
 
   floor2:
     container_name: floor2
@@ -79,10 +114,8 @@ services:
     depends_on:
       - mqtt
       - controller
-      - input_feeder
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.7
 
   floor3:
     container_name: floor3
@@ -93,10 +126,8 @@ services:
     depends_on:
       - mqtt
       - controller
-      - input_feeder
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.8
 
   floor4:
     container_name: floor4
@@ -107,8 +138,6 @@ services:
     depends_on:
       - mqtt
       - controller
-      - input_feeder
     networks:
       cps_sim:
-        ipv4_address: 172.21.0.9
 
