can handle waiting queue contains more than elevator max capacity

--- a/input-feeder/samples/simple_scenario.yaml
+++ b/input-feeder/samples/simple_scenario.yaml
@@ -5,6 +5,17 @@
         - destination: 1
         - destination: 2
         - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
+        - destination: 3
     # - start: 1
     #   passengers:
     #     - destination: 2
