update test scenario

--- a/input-feeder/samples/simple_scenario.yaml
+++ b/input-feeder/samples/simple_scenario.yaml
@@ -5,16 +5,12 @@
         - destination: 1
         - destination: 2
         - destination: 2
+    - start: 1
+      passengers:
         - destination: 2
-        - destination: 2
-        - destination: 2
+    - start: 2
+      passengers:
         - destination: 3
-    # - start: 1
-    #   passengers:
-    #     - destination: 2
-    # - start: 2
-    #   passengers:
-    #     - destination: 3
 - time: 1
   floors:
     - start: 2
