fix second call button pushed not recognized

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         - mqtt
       environment:
         - mqtt_host=mqtt
-        - floor_count=4
+        - floor_count=10
         - elevator_count=1
 
   elevator0:
@@ -73,3 +73,68 @@ services:
       - mqtt
       - controller
 
+  floor4:
+    container_name: floor4
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=4
+    depends_on:
+      - mqtt
+      - controller
+
+  floor5:
+    container_name: floor5
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=5
+    depends_on:
+      - mqtt
+      - controller
+
+  floor6:
+    container_name: floor6
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=6
+    depends_on:
+      - mqtt
+      - controller
+
+  floor7:
+    container_name: floor7
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=7
+    depends_on:
+      - mqtt
+      - controller
+
+  floor8:
+    container_name: floor8
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=8
+    depends_on:
+      - mqtt
+      - controller
+
+  floor9:
+    container_name: floor9
+    build: ./floor
+    image: docker-hub.informatik.haw-hamburg.de/wp-cps/simulation/floor
+    environment:
+      - mqtt_host=mqtt
+      - floor_level=9
+    depends_on:
+      - mqtt
+      - controller
