--- a/elevator/Dockerfile
+++ b/elevator/Dockerfile
@@ -1,12 +1,17 @@
 FROM python:alpine
 
-WORKDIR /app
+# build and install the cps_common package
+COPY ./common /app/common
+WORKDIR /app/common
+RUN python3 setup.py sdist bdist_wheel && pip3 install .
 
+# copy app files
+WORKDIR /app/elevator
 # Install dependencies
-COPY ./requirements.txt ./requirements.txt
+COPY ./elevator/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Add projekt source
-COPY ./ ./
+COPY ./elevator ./
 
 ENTRYPOINT ["python", "elevator.py"]
