--- a/input-feeder/samples/multiple_all_at_once.yaml
+++ b/input-feeder/samples/multiple_all_at_once.yaml
@@ -1,29 +1,13 @@
 - time: 0
-  floors:
+  passengers:
     - start: 0
-      passengers:
-        - destination: 9
-    - start: 1
-      passengers:
-        - destination: 9
-    - start: 2
-      passengers:
-        - destination: 9
-    - start: 3
-      passengers:
-        - destination: 9
-    - start: 4
-      passengers:
-        - destination: 9
-    - start: 5
-      passengers:
-        - destination: 9
-    - start: 6
-      passengers:
-        - destination: 9
-    - start: 7
-      passengers:
-        - destination: 9
-    - start: 8
-      passengers:
-        - destination: 9
+      destinations:
+        1: 1
+        2: 1
+        3: 1
+        4: 1
+        5: 1
+        6: 1
+        7: 1
+        8: 1
+        9: 1
