--- a/input-feeder/samples/one_at_a_time.yaml
+++ b/input-feeder/samples/one_at_a_time.yaml
@@ -1,45 +1,25 @@
 - time: 0
-  floors:
+  passengers:
     - start: 0
-      passengers:
-      - destination: 1
-- time: 2
-  floors:
+      destinations:
+        1: 20
+- time: 5
+  passengers:
     - start: 1
-      passengers:
-      - destination: 2
-- time: 4
-  floors:
-    - start: 2
-      passengers:
-      - destination: 3
-- time: 6
-  floors:
-    - start: 3
-      passengers:
-      - destination: 4
-- time: 8
-  floors:
-    - start: 4
-      passengers:
-      - destination: 5
+      destinations:
+        2: 20
 - time: 10
-  floors:
-    - start: 5
-      passengers:
-      - destination: 6
-- time: 12
-  floors:
-    - start: 6
-      passengers:
-      - destination: 7
-- time: 14
-  floors:
-    - start: 7
-      passengers:
-      - destination: 8
-- time: 16
-  floors:
-    - start: 8
-      passengers:
-      - destination: 9
+  passengers:
+    - start: 2
+      destinations:
+        3: 20
+- time: 15
+  passengers:
+    - start: 3
+      destinations:
+        4: 20
+- time: 20
+  passengers:
+    - start: 4
+      destinations:
+        5: 20
