controller: add common module to controller

--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -1,12 +1,16 @@
 FROM python:alpine
 
-WORKDIR /app
-
 # Install dependencies
-COPY ./requirements.txt ./requirements.txt
+COPY ./controller/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# build and install the cps_common package
+COPY ./common /app/common
+WORKDIR /app/common
+RUN python3 setup.py sdist bdist_wheel && pip3 install .
+
+WORKDIR /app/controller
 # Add projekt source
-COPY ./ ./
+COPY ./controller ./
 
 ENTRYPOINT ["python", "controller.py"]
