--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - floor_count=10
       - elevator_count=6
       - log_level=DEBUG
+      - mode=smart
 
   elevator0:
     container_name: elevator0
